<resources>
    <string name="app_name">Reading Coach</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Reading Plans</item>
        <item>Bookmarks</item>
        <item>Terminologies</item>
        <item>Journal</item>
        <item>About</item>
        <item>Help</item>
        <item>Settings</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="btn_save">Save</string>
    <string name="txt_title">Title</string>
    <string name="txt_content">Content</string>
    <string name="btn_poems">Poems</string>
    <string name="btn_story">Story</string>
    <string name="btn_flashCards">Flash Cards</string>
    <string name="btn_speech_to_text">Speech</string>
    <string name="btn_reading_plans">Reading Plans</string>
    <string name="btn_home">Home</string>
    <string name="btn_bookmarks">Bookmarks</string>
    <string name="btn_journal">Journal</string>
    <string name="btn_terminologies">Terminologies</string>
    <string name="btn_about">About</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_help">Help</string>
    <string name="txt_overview">      \t\t\Reading Coach is a simple education program that promotes to read and comprehend designed for senior high school students. The \"Reading Coach\" app builds skills in passage comprehension,word pronounciation and answering multiple choice questions about the text.\n\n\t When using \"Reading Coach\" learners will first read the passage.The learners must hold the information in order to answer the multiple choice test. The stories and poems were crafted by the real books from the senior high school teachers to encourage students to read more. \n\n\tThis app is fit for students who: -When reading or listening information seems to \'go in one ear and out the other. -Have trouble responding to questions about the passage unless they can refer back to the passage.</string>
    <string name="btn_yes">Yes</string>
    <string name="txt_you_got_it">You got it!</string>

    <string name="title_t2s">Story</string>
    <string name="quizzer">Quizzer</string>
    <string name="settings">Settings</string>
    <string name="txtJournal">Journal</string>

    <string name="confirmation_message">Do you want to exit?</string>
    <string name="message">Message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="hard">Hard</string>
    <string name="reset">Do you want to reset the settings?</string>


</resources>
