<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/house"
            android:title="@string/btn_home" />
        <item
            android:id="@+id/reading_plans"
            android:icon="@drawable/readingplans"
            android:title="@string/btn_reading_plans" />
        <item
            android:id="@+id/bookmarks"
            android:icon="@drawable/bookmark"
            android:title="@string/btn_bookmarks" />
        <item
            android:id="@+id/journal"
            android:icon="@drawable/journal"
            android:title="@string/btn_journal" />
        <item
            android:icon="@drawable/termnilogies"
            android:id="@+id/terminologies"
            android:title="@string/btn_terminologies" />
        <item android:title="@string/btn_help"
            android:id="@+id/help"
            android:icon="@drawable/help" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/btn_about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/btn_settings" />



    </group>

    <!--<item android:title="Other">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/journal"-->
                <!--android:icon="@drawable/ic_journals"-->
                <!--android:title="@string/btn_journal" />-->

            <!--<item-->
                <!--android:id="@+id/about"-->
                <!--android:icon="@drawable/ic_about"-->
                <!--android:title="@string/btn_about" />-->

            <!--<item android:title="@string/btn_help"-->
                <!--android:id="@+id/help"-->
                <!--android:icon="@drawable/help" />-->

            <!--<item-->
                <!--android:id="@+id/nav_settings"-->
                <!--android:icon="@drawable/ic_settings"-->
                <!--android:title="@string/btn_settings" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>