<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/correct"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/txtJournal"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:padding="15dp"
        android:layout_height="180dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_title"
            android:id="@+id/txtTitle"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_content"
            android:layout_below="@+id/txtTitle"
            android:id="@+id/txtContent"
            />
        <Button
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/btn_save"
            android:id="@+id/btnSave"
            android:background="@color/correct"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>