<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/correct"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/message"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:padding="15dp"
        android:layout_height="180dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_marginTop="26dp"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/colorAccent"
            android:background="@color/correct"

            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/btnYesreset"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_toLeftOf="@id/btnYesreset"
            android:id="@+id/btnNoreset"
            android:layout_alignParentBottom="true"
            android:background="@color/no"
            android:textColor="@color/colorAccent"

            android:layout_marginRight="10dp"
            />
    </RelativeLayout>


</LinearLayout>