<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme"
        android:text="@string/message"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="200dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/confirmation_message"
            android:layout_centerInParent="true"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/colorAccent"
            android:background="@color/yes"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/btnYes"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_toLeftOf="@id/btnYes"
            android:id="@+id/btnNo"
            android:layout_alignParentBottom="true"
            android:background="@color/no"
            android:textColor="@color/colorAccent"

            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
</LinearLayout>